--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,48 @@
     height: 5em;
   }
 }
+
+/* COCKTAIL LIST (HOME PAGE) */
+
+.cocktails-list {
+  max-width: 1350px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;  
+}
+
+.cocktail {  
+  width: 300px;
+  margin: 20px;
+  border: 1px solid beige;
+  box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.400);
+  border-radius: 10px;
+}
+
+
+.img-container img {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  width: 100%;
+  display: block;
+}
+
+.cocktail-footer {
+  padding: 10px;
+}
+
+.cocktail-footer h3 {
+  font-size: 2.3em;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.cocktail-footer h4 {
+  font-size: 1.1em;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.cocktail p {
+  color: rgb(100, 100, 100);
+}
